[gd_scene load_steps=7 format=2]

[ext_resource path="res://Objects/Baddies/sprites/sausageman/sausageman_shot_0.png" type="Texture" id=1]
[ext_resource path="res://Objects/Baddies/obj_sausageman_dead.gd" type="Script" id=2]
[ext_resource path="res://Objects/Baddies/sprites/pizzaboy/pizzaboy.png" type="Texture" id=3]
[ext_resource path="res://Objects/Baddies/sprites/cheeseslime/slimedead_0.png" type="Texture" id=4]
[ext_resource path="res://Objects/Baddies/sprites/forknight/forknight_dead_0.png" type="Texture" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "forknight_dead",
"speed": 60.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "pizzaboy",
"speed": 60.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "sausageman_shot",
"speed": 60.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "slimedead",
"speed": 60.0
} ]

[node name="obj_sausageman_dead" type="Node2D" groups=["obj_sausageman_dead"]]
script = ExtResource( 2 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "forknight_dead"

[node name="MachAllTimer" type="Timer" parent="."]
wait_time = 0.083
one_shot = true

[node name="CamVisibility" type="VisibilityNotifier2D" parent="."]
rect = Rect2( -128, -128, 256, 256 )

[connection signal="animation_finished" from="Sprite" to="." method="_on_Sprite_animation_finished"]
[connection signal="timeout" from="MachAllTimer" to="." method="_on_MachAllTimer_timeout"]
